--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js" integrity="sha512-3RlxD1bW34eFKPwj9gUXEWtdSMC59QqIqHnD8O/NoTwSJhgxRizdcFVQhUMFyTp5RwLTDL0Lbcqtl8b7bFAzog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="sketch.js"></script>
-    <script src="bresenhamLine.js"></script>
+    <script src="bresenhamRect.js"></script>
 </body>
 </html>
